@@ -29,6 +29,9 @@
 	flags to configure.ac; remove adding of -march option; forcefully disable
 	symbol visibility for ICC due to linker trouble; disable NASM and SIMD
 	specific stuff if no MMX is found, as we don't use other SIMD instructions
+	
+	* src/extensions/al_ext_vorbis.c: enable dlopening (ripped from arts backend;
+	testvorbis seems to indicate working code...)
 
 2006-01-09  Sven Panne  <sven.panne@aedion.de>
 
